@@ -8867,9 +8867,9 @@ or a list which consists of the following elements:
     (setq show-trailing-whitespace nil))
   (when (boundp 'mwheel-scroll-up-function)
     (eval '(set (make-local-variable (quote mwheel-scroll-up-function))
-		(function w3m-mwheel-scroll-up)))
+		(function w3m-scroll-up)))
     (eval '(set (make-local-variable (quote mwheel-scroll-down-function))
-		(function w3m-mwheel-scroll-down))))
+		(function w3m-scroll-down))))
   (w3m-setup-toolbar)
   (w3m-setup-menu)
   (run-hooks 'w3m-mode-setup-functions)
@@ -8880,49 +8880,11 @@ or a list which consists of the following elements:
       "2013-01-23")
   (wrong-number-of-arguments ;; XEmacs
    (define-obsolete-function-alias 'w3m-scroll-up-1 'w3m-scroll-up)))
-(defun w3m-scroll-up (&optional arg mwheel)
-  "Scroll the current window up ARG lines.
-ARG will be fixed into 1 when this function is called interactively.
-MWHEEL indicates that this function is called by the mouse wheel.
-This function avoids the bug that Emacs 21.x hangs up when scrolling
-up for too many number of lines if `scroll-margin' is set as two or
-greater."
-  (interactive '(1))
-  (let ((cur (point))
-	end)
-    (goto-char (point-max))
-    (skip-chars-backward "\t\n\r ")
-    (forward-line 1)
-    (setq end (point))
-    (goto-char cur)
-    (if (and (or mwheel (not arg))
-	     (pos-visible-in-window-p end))
-	(run-with-timer 1e-9 nil
-			(lambda (win pos)
-			  (when (window-live-p win)
-			    (goto-char pos)
-			    (recenter -1)
-			    (w3m-message "End of buffer")))
-			(selected-window) end)
-      (w3m-static-unless (featurep 'xemacs)
-	(when (and (numberp arg)
-		   (> arg 0)
-		   (numberp scroll-margin)
-		   (> scroll-margin 0))
-	  (setq arg (min arg
-			 (max 0 (- (count-lines (window-start) (point-max))
-				   scroll-margin))))))
-      (scroll-up arg)
-      (when (and truncate-lines
-		 (or mwheel (not arg))
-		 (pos-visible-in-window-p end))
-	(setq cur (point))
-	(goto-char end)
-	(recenter -1)
-	(goto-char cur)))))
 
-(defun w3m-mwheel-scroll-up (&optional arg)
-  (w3m-scroll-up arg t))
+(defun w3m-scroll-up (&optional arg)
+  "Scroll the current window up ARG lines."
+  (interactive "P")
+  (scroll-up (or arg 1)))
 
 (defun w3m-scroll-up-or-next-url (arg)
   "Scroll the current window up ARG lines, or go to the next page."
@@ -8943,25 +8905,10 @@ greater."
 	  (w3m-goto-url w3m-next-url))
       (w3m-scroll-up arg))))
 
-(defun w3m-scroll-down (&optional arg mwheel)
-  "Scroll the current window down ARG lines.
-ARG will be fixed into 1 when this function is called interactively.
-MWHEEL indicates that this function is called by the mouse wheel."
-  (interactive '(1))
-  (if (and (or mwheel (not arg))
-	   (pos-visible-in-window-p (point-min)))
-      (run-with-timer 1e-9 nil
-		      (lambda (win)
-			(when (window-live-p win)
-			  (select-window win)
-			  (goto-char (point-min))
-			  (recenter 0)
-			  (w3m-message "Beginning of buffer")))
-		      (selected-window))
-    (scroll-down arg)))
-
-(defun w3m-mwheel-scroll-down (&optional arg)
-  (w3m-scroll-down arg t))
+(defun w3m-scroll-down (&optional arg)
+  "Scroll the current window down ARG lines."
+  (interactive "P")
+  (scroll-down (or arg 1)))
 
 (defun w3m-scroll-down-or-previous-url (arg)
   "Scroll the current window down ARG lines, or go to the previous page."
